revert macbook commit