@@ -1,10 +1,7 @@
 package net.anfoya.mail.browser.javafx.util;
 
 import java.awt.Desktop;
-import java.net.MalformedURLException;
 import java.net.URI;
-import java.net.URISyntaxException;
-import java.net.URL;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -19,26 +16,18 @@ public class UrlHelper {
 		open(url, null);
 	}
 
-	public static void open(String urlStr, Callback<String, Void> onMailto) {
-		URI uri;
-		try {
-			final URL url = new URL(urlStr);
-			uri = new URI(url.getProtocol(), url.getHost(), url.getPath(), url.getQuery(), null);
-		} catch (final URISyntaxException | MalformedURLException e) {
-			LOGGER.error("reading address {}", urlStr, e);
-			return;
-		}
-		final String scheme = uri.getScheme();
-		if (scheme.equals("mailto")) {
+	public static void open(String url, Callback<String, Void> onMailto) {
+		final URI uri = URI.create(url);
+		if (uri.getScheme().equals("mailto")) {
 			onMailto.call(uri.getSchemeSpecificPart());
 		} else {
 			ThreadPool.getInstance().submitHigh(() -> {
 				try {
 					Desktop.getDesktop().browse(uri);
 				} catch (final Exception e) {
-					LOGGER.error("handling link {}", urlStr, e);
+					LOGGER.error("open {}", url, e);
 				}
-			}, "handling url " + urlStr);
+			}, "open " + url);
 		}
 	}
 }
